<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="fill"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$DummySectionFragment" >

<FrameLayout 
android:id="@+id/frameLayout1" 
android:layout_width="match_parent" 
android:layout_height="match_parent"> 

<LinearLayout
    android:id="@+id/linearstep2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="fill_horizontal|center_vertical"
    android:orientation="vertical" >

<TextView
    android:id="@+id/customer_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/label_customer" />

    <EditText
        android:id="@+id/expressdeliveries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_customer" >

        <requestFocus android:layout_width="match_parent" />

    </EditText>

    <TextView
        android:id="@+id/region_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_region" />
    
    <ExpandableListView
        android:id="@+id/region"
        android:layout_width="match_parent"
        android:layout_height="60dp" >

    </ExpandableListView>

    <TextView
        android:id="@+id/date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_date_visit" />

    <DatePicker
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/address_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_addess" />

    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:ems="10"
        android:hint="@string/hint_address" >

        <requestFocus />
    </EditText>
    <TextView
        android:id="@+id/kindactivity_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_kind_activity" />

     <ExpandableListView
         android:id="@+id/kindactivity"
         android:layout_width="match_parent"
         android:layout_height="60dp" >

    </ExpandableListView>
    
      <ExpandableListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         >

    </ExpandableListView>

</LinearLayout>
<Button 
android:id="@+id/but_prev" 
android:layout_width="wrap_content" 
android:layout_height="wrap_content" 
android:layout_gravity="bottom|left" 
android:text="@string/but_prev"> 
</Button> 
<Button 
android:id="@+id/but_next" 
android:layout_width="wrap_content" 
android:layout_height="wrap_content" 
android:layout_gravity="bottom|right" 
android:text="@string/but_next"> 
</Button> 

</FrameLayout> 
</RelativeLayout>