<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$DummySectionFragment" >
	


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="vertical"       
        android:scrollbarAlwaysDrawVerticalTrack="true" > 	

            <FrameLayout
                android:id="@+id/frameLayout1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

<LinearLayout
    android:id="@+id/linearstep2"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:overScrollMode="ifContentScrolls"
    android:paddingBottom="45dp"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbarStyle="insideInset"
    android:scrollbars="vertical"
    android:showDividers="beginning" >
		
<TextView
 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/label_direct_purchase" />

  <EditText
      android:id="@+id/direct_purchase"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/hint_value" >

        <requestFocus android:layout_width="match_parent" />

    </EditText>

  <TextView
    
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/label_purchases_competitors" />

  <EditText
      android:id="@+id/pusrchase_competitors"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/hint_value" >

        <requestFocus android:layout_width="match_parent" />

    </EditText>

  <TextView    
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/label_supplier_competitors" />

  <EditText
        android:id="@+id/supplier_competitors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_value" >

        <requestFocus android:layout_width="match_parent" />

    </EditText>
  
  <TextView
   
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/label_count_outlets" />

  <EditText
      android:id="@+id/count_outlets"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/hint_value"
      android:inputType="number" >

        <requestFocus android:layout_width="match_parent" />

    </EditText>
  
  <TextView
    
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/label_total_turnover" />

  <EditText
      android:id="@+id/total_turnover"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/hint_value"
      android:inputType="numberDecimal" >

        <requestFocus android:layout_width="match_parent" />

    </EditText>
  
  
  <TextView
  
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/label_shared_of_total_terema" />

  <EditText
      android:id="@+id/share_of_total_terema"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/hint_value"
      android:inputType="numberDecimal" >

        <requestFocus android:layout_width="match_parent" />

    </EditText>
  
  
 <TextView
    
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/label_discounts_competitors" />

  <EditText
        android:id="@+id/discounts_competitors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_value" >

        <requestFocus android:layout_width="match_parent" />

    </EditText>
    
  
  <TextView
    
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/label_adv_companies_competitors" />

  <EditText
        android:id="@+id/adv_companies_competitors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_value" >

        <requestFocus android:layout_width="match_parent" />

    </EditText>
  
   <TextView
    
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/label_promo_brand" />

  <EditText
        android:id="@+id/promo_brand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_value" >

        <requestFocus android:layout_width="match_parent" />

    </EditText>
  
  

</LinearLayout>

<Button
    android:id="@+id/but_prev"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|left"
    android:text="@string/but_prev" >
 
</Button> 

<Button
    android:id="@+id/but_next"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|right"
    android:text="@string/but_next" >
 
</Button> 
  </FrameLayout>
</ScrollView>
   
    
</RelativeLayout>