<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$DummySectionFragment" >

      <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="vertical"       
        android:scrollbarAlwaysDrawVerticalTrack="true" > 	
<FrameLayout
    android:id="@+id/frameLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarStyle="insideInset"
    android:scrollbars="horizontal|vertical" >

         	
<LinearLayout
    android:id="@+id/linearstep2"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="fill_horizontal|center_vertical"
    android:orientation="vertical"
      android:paddingBottom="45dp"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbarStyle="outsideInset"
    android:scrollbars="vertical" >

<TextView 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/label_to_order" />

  <EditText
      android:id="@+id/to_order"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/hint_value" >

        <requestFocus android:layout_width="match_parent" />

    </EditText>

  <TextView
    
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/label_express_deliveries" />

  <EditText
      android:id="@+id/express_deliveries"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/hint_value"
      android:inputType="number" >

   

    </EditText>

  <TextView    
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/label_amount_deliveries" />

  <EditText
      android:id="@+id/amount_deliveries"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/hint_value"
      android:inputType="numberDecimal" >


    </EditText>
  
  <TextView
   
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/label_intro_product_lines" />

  <EditText
      android:id="@+id/intro_prodiuctlines"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/hint_value"
      android:inputType="number" >        

    </EditText>
  
  <TextView
    
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/label_training_seminar" />

  <EditText
        android:id="@+id/training_seminar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_value" >


    </EditText>
  
  <TextView
  
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/label_express_deliveries" />

  <EditText
      android:id="@+id/customer"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/hint_value"
      android:inputType="number" >

 

    </EditText>
  
 


  
</LinearLayout>

       
<Button
    android:id="@+id/but_prev"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|left"
    android:text="@string/but_prev" >
 
</Button> 

<Button
    android:id="@+id/but_next"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|right"
    android:text="@string/but_next" >
 
</Button> 
  </FrameLayout>
    </ScrollView>
</RelativeLayout>