<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ActivityStep1" >
	
     <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="vertical"       
        android:scrollbarAlwaysDrawVerticalTrack="true" > 	
<FrameLayout 
android:id="@+id/frameLayout1" 
android:layout_width="match_parent" 
android:layout_height="match_parent"> 
<LinearLayout
    android:id="@+id/linearstep2"    
     android:layout_width="match_parent"
    android:layout_height="wrap_content"
      android:paddingBottom="45dp"
    android:layout_gravity="fill_horizontal|center_vertical"
    android:orientation="vertical" 
    >

	   <TextView
	       android:layout_width="match_parent"
	       android:layout_height="wrap_content"
	       android:text="@string/label_login"
	       android:visibility="gone" />

  <EditText
      android:id="@+id/login"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/hint_login"
      android:inputType="text"
      android:visibility="gone" >

    </EditText>

     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/label_password"
         android:visibility="gone" />

  <EditText
      android:id="@+id/my_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/hint_password"
      android:inputType="textWebPassword"
      android:visibility="gone" >

     
    </EditText>
  
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:text="@string/label_directory"
          android:fontFamily="@string/text_family"
      	android:textSize="@dimen/text_size" />

  <EditText
      android:id="@+id/directory"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"	
      android:layout_gravity="center"      
      android:ems="10"
      android:fontFamily="@string/text_family"
      android:hint="@string/hint_directory"
      android:inputType="text"            
      android:textSize="@dimen/text_size" >

      <requestFocus />

  </EditText>

  <FrameLayout
      android:id="@+id/loading_indicator"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" >

  </FrameLayout>

    <FrameLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content" >

	  <TextView
	      android:id="@+id/error_loading_indicator"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:layout_gravity="center_horizontal"
	      android:gravity="center"	   
	      android:fontFamily="@string/text_family"
      	  android:textSize="@dimen/text_size"   
	      />

  </FrameLayout>
  
    <CheckBox
        android:id="@+id/save_my_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:text="Запомнить логин/пароль"
        android:visibility="invisible" />
    


  <TextView
      android:id="@+id/error_login"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" 
      android:textColor="@color/error" />
  
</LinearLayout>
   
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|center"
    android:orientation="horizontal" >

   <Button
       android:id="@+id/but_login"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:layout_weight="1"
       android:text="@string/but_ok" >
 
</Button> 

<Button
    android:id="@+id/but_cancel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_weight="1"    
    android:text="@string/but_cancel" >
 
</Button> 
</LinearLayout>
</FrameLayout>
</ScrollView>
</RelativeLayout>